viewport issues on tablet

--- a/less/styles.less
+++ b/less/styles.less
@@ -26,6 +26,7 @@ html,
 	font-family: "Muli", Arial, Helvetica, sans-serif;
 	font-weight: 300;
 	font-style: normal;
+	overflow: hidden;
 }
 
 .detect {
